tests/grammar/datatype/str_interpolation/invalid_format_spec_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:3:11
  |
3 | data = "${a: #js}" + " $$ "
  |           ^ #js is a invalid format spec
  |